--- a/db/MarkupStyle.yml
+++ b/db/MarkupStyle.yml
@@ -1,9 +1,9 @@
 --- 
-- !ruby/object:MarkupStyle 
+- !ruby/object:Goldberg::MarkupStyle 
   attributes: 
     name: Textile
     id: "1"
-- !ruby/object:MarkupStyle 
+- !ruby/object:Goldberg::MarkupStyle 
   attributes: 
     name: Markdown
     id: "2"
