--- a/db/User.yml
+++ b/db/User.yml
@@ -1,7 +1,10 @@
 --- 
-- !ruby/object:User 
+- !ruby/object:Goldberg::User 
   attributes: 
     name: admin
+    fullname: 
+    password_salt: 
     role_id: "3"
     id: "2"
     password: d033e22ae348aeb5660fc2140aec35850c4da997
+    email: 
