--- a/db/Role.yml
+++ b/db/Role.yml
@@ -1,28 +1,28 @@
 --- 
-- !ruby/object:Role 
+- !ruby/object:Goldberg::Role 
   attributes: 
     name: Public
-    updated_at: 2006-10-29 22:22:07
+    updated_at: 2007-02-22 09:58:02
     cache: 
     default_page_id: 
     id: "1"
     description: Members of the public who are not logged in.
     parent_id: 
     created_at: 2006-06-23 21:03:49
-- !ruby/object:Role 
+- !ruby/object:Goldberg::Role 
   attributes: 
     name: Member
-    updated_at: 2006-10-29 22:22:07
+    updated_at: 2007-02-22 09:58:02
     cache: 
     default_page_id: 
     id: "2"
     description: ""
     parent_id: "1"
     created_at: 2006-06-23 21:03:50
-- !ruby/object:Role 
+- !ruby/object:Goldberg::Role 
   attributes: 
     name: Administrator
-    updated_at: 2006-10-29 22:22:07
+    updated_at: 2007-02-22 09:58:02
     cache: 
     default_page_id: "8"
     id: "3"
