--- a/db/Role.yml
+++ b/db/Role.yml
@@ -2,8 +2,122 @@
 - !ruby/object:Goldberg::Role 
   attributes: 
     name: Public
-    updated_at: 2007-02-22 09:58:02
-    cache: 
+    updated_at: 2007-03-19 00:23:16
+    cache: |
+      --- 
+      :credentials: !ruby/object:Goldberg::Credentials 
+        actions: 
+          goldberg/site_controllers: 
+            list: false
+          goldberg/menu_items: 
+            list: false
+            link: true
+          goldberg/system_settings: 
+            list: false
+          goldberg/permissions: 
+            list: false
+          goldberg/roles: 
+            list: false
+          goldberg/content_pages: 
+            list: false
+            view_default: true
+            view: true
+          goldberg/auth: 
+            logout: true
+            login_failed: true
+            forgotten: true
+            login: true
+          goldberg/users: 
+            self_register: true
+            forgot_password: true
+            list: false
+            reset_password: true
+            forgot_password_submit: true
+            reset_password_submit: true
+            confirm_registration: true
+            self_create: true
+            confirm_registration_submit: true
+          goldberg/controller_actions: 
+            list: false
+        controllers: 
+          goldberg/roles_permissions: false
+          goldberg/site_controllers: false
+          goldberg/menu_items: false
+          goldberg/system_settings: false
+          goldberg/roles: false
+          goldberg/permissions: false
+          goldberg/markup_styles: false
+          goldberg/content_pages: false
+          goldberg/auth: false
+          goldberg/users: false
+          goldberg/controller_actions: false
+        pages: 
+          admin: false
+          notfound: true
+          site_admin: false
+          contact_us: true
+          credits: true
+          denied: true
+          expired: true
+          home: true
+        permission_ids: 
+        - 4
+        - 3
+        role_id: 1
+        role_ids: 
+        - 1
+        updated_at: 2007-03-19 00:23:15 +11:00
+      :menu: !ruby/object:Goldberg::Menu 
+        by_id: 
+          1: &id003 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 1
+            controller_action_id: 
+            id: 1
+            label: Home
+            name: home
+            parent: 
+            parent_id: 
+            site_controller_id: 
+            url: /home
+          2: &id001 !ruby/object:Goldberg::Menu::Node 
+            children: 
+            - 14
+            content_page_id: 6
+            controller_action_id: 
+            id: 2
+            label: Contact Us
+            name: contact_us
+            parent: 
+            parent_id: 
+            site_controller_id: 
+            url: /contact_us
+          14: &id002 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 10
+            controller_action_id: 
+            id: 14
+            label: Credits &amp; Licence
+            name: credits
+            parent: 
+            parent_id: 2
+            site_controller_id: 
+            url: /credits
+        by_name: 
+          contact_us: *id001
+          credits: *id002
+          home: *id003
+        crumbs: 
+        - 1
+        root: &id004 !ruby/object:Goldberg::Menu::Node 
+          children: 
+          - 1
+          - 2
+          parent: 
+        selected: 
+          1: *id003
+        vector: 
+        - *id004
+        - *id003
+
     default_page_id: 
     id: "1"
     description: Members of the public who are not logged in.
@@ -12,8 +126,124 @@
 - !ruby/object:Goldberg::Role 
   attributes: 
     name: Member
-    updated_at: 2007-02-22 09:58:02
-    cache: 
+    updated_at: 2007-03-19 00:23:16
+    cache: |
+      --- 
+      :credentials: !ruby/object:Goldberg::Credentials 
+        actions: 
+          goldberg/site_controllers: 
+            list: false
+          goldberg/menu_items: 
+            list: false
+            link: true
+          goldberg/system_settings: 
+            list: false
+          goldberg/permissions: 
+            list: false
+          goldberg/roles: 
+            list: false
+          goldberg/content_pages: 
+            list: false
+            view_default: true
+            view: true
+          goldberg/auth: 
+            logout: true
+            login_failed: true
+            forgotten: true
+            login: true
+          goldberg/users: 
+            self_register: true
+            forgot_password: true
+            list: false
+            reset_password: true
+            forgot_password_submit: true
+            reset_password_submit: true
+            confirm_registration: true
+            self_create: true
+            confirm_registration_submit: true
+          goldberg/controller_actions: 
+            list: false
+        controllers: 
+          goldberg/roles_permissions: false
+          goldberg/site_controllers: false
+          goldberg/menu_items: false
+          goldberg/system_settings: false
+          goldberg/roles: false
+          goldberg/permissions: false
+          goldberg/markup_styles: false
+          goldberg/content_pages: false
+          goldberg/auth: false
+          goldberg/users: false
+          goldberg/controller_actions: false
+        pages: 
+          admin: false
+          notfound: true
+          site_admin: false
+          contact_us: true
+          credits: true
+          denied: true
+          expired: true
+          home: true
+        permission_ids: 
+        - 5
+        - 4
+        - 3
+        role_id: 2
+        role_ids: 
+        - 2
+        - 1
+        updated_at: 2007-03-19 00:23:16 +11:00
+      :menu: !ruby/object:Goldberg::Menu 
+        by_id: 
+          1: &id003 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 1
+            controller_action_id: 
+            id: 1
+            label: Home
+            name: home
+            parent: 
+            parent_id: 
+            site_controller_id: 
+            url: /home
+          2: &id001 !ruby/object:Goldberg::Menu::Node 
+            children: 
+            - 14
+            content_page_id: 6
+            controller_action_id: 
+            id: 2
+            label: Contact Us
+            name: contact_us
+            parent: 
+            parent_id: 
+            site_controller_id: 
+            url: /contact_us
+          14: &id002 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 10
+            controller_action_id: 
+            id: 14
+            label: Credits &amp; Licence
+            name: credits
+            parent: 
+            parent_id: 2
+            site_controller_id: 
+            url: /credits
+        by_name: 
+          contact_us: *id001
+          credits: *id002
+          home: *id003
+        crumbs: 
+        - 1
+        root: &id004 !ruby/object:Goldberg::Menu::Node 
+          children: 
+          - 1
+          - 2
+          parent: 
+        selected: 
+          1: *id003
+        vector: 
+        - *id004
+        - *id003
+
     default_page_id: 
     id: "2"
     description: ""
@@ -22,8 +252,237 @@
 - !ruby/object:Goldberg::Role 
   attributes: 
     name: Administrator
-    updated_at: 2007-02-22 09:58:02
-    cache: 
+    updated_at: 2007-03-19 00:23:16
+    cache: |
+      --- 
+      :credentials: !ruby/object:Goldberg::Credentials 
+        actions: 
+          goldberg/site_controllers: 
+            list: true
+          goldberg/menu_items: 
+            list: true
+            link: true
+          goldberg/system_settings: 
+            list: true
+          goldberg/permissions: 
+            list: true
+          goldberg/roles: 
+            list: true
+          goldberg/content_pages: 
+            list: true
+            view_default: true
+            view: true
+          goldberg/auth: 
+            logout: true
+            login_failed: true
+            forgotten: true
+            login: true
+          goldberg/users: 
+            self_register: true
+            forgot_password: true
+            list: true
+            reset_password: true
+            forgot_password_submit: true
+            reset_password_submit: true
+            confirm_registration: true
+            self_create: true
+            confirm_registration_submit: true
+          goldberg/controller_actions: 
+            list: true
+        controllers: 
+          goldberg/roles_permissions: true
+          goldberg/site_controllers: true
+          goldberg/menu_items: true
+          goldberg/system_settings: true
+          goldberg/roles: true
+          goldberg/permissions: true
+          goldberg/markup_styles: true
+          goldberg/content_pages: true
+          goldberg/auth: true
+          goldberg/users: true
+          goldberg/controller_actions: true
+        pages: 
+          admin: true
+          notfound: true
+          site_admin: true
+          contact_us: true
+          credits: true
+          denied: true
+          expired: true
+          home: true
+        permission_ids: 
+        - 1
+        - 5
+        - 4
+        - 2
+        - 3
+        role_id: 3
+        role_ids: 
+        - 3
+        - 2
+        - 1
+        updated_at: 2007-03-19 00:23:16 +11:00
+      :menu: !ruby/object:Goldberg::Menu 
+        by_id: 
+          5: &id007 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 
+            controller_action_id: 4
+            id: 5
+            label: Permissions
+            name: setup/permissions
+            parent: 
+            parent_id: 9
+            site_controller_id: 6
+            url: /goldberg/permissions/list
+          11: &id004 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 
+            controller_action_id: 11
+            id: 11
+            label: Menu Editor
+            name: setup/menus
+            parent: 
+            parent_id: 9
+            site_controller_id: 5
+            url: /goldberg/menu_items/list
+          6: &id005 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 
+            controller_action_id: 3
+            id: 6
+            label: Roles
+            name: setup/roles
+            parent: 
+            parent_id: 9
+            site_controller_id: 7
+            url: /goldberg/roles/list
+          12: &id003 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 
+            controller_action_id: 12
+            id: 12
+            label: System Settings
+            name: setup/system_settings
+            parent: 
+            parent_id: 9
+            site_controller_id: 9
+            url: /goldberg/system_settings/list
+          1: &id012 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 1
+            controller_action_id: 
+            id: 1
+            label: Home
+            name: home
+            parent: 
+            parent_id: 
+            site_controller_id: 
+            url: /home
+          7: &id001 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 
+            controller_action_id: 8
+            id: 7
+            label: Content Pages
+            name: setup/pages
+            parent: 
+            parent_id: 9
+            site_controller_id: 1
+            url: /goldberg/content_pages/list
+          13: &id002 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 
+            controller_action_id: 15
+            id: 13
+            label: Users
+            name: setup/users
+            parent: 
+            parent_id: 9
+            site_controller_id: 10
+            url: /goldberg/users/list
+          2: &id009 !ruby/object:Goldberg::Menu::Node 
+            children: 
+            - 14
+            content_page_id: 6
+            controller_action_id: 
+            id: 2
+            label: Contact Us
+            name: contact_us
+            parent: 
+            parent_id: 
+            site_controller_id: 
+            url: /contact_us
+          8: &id011 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 
+            controller_action_id: 9
+            id: 8
+            label: Controllers / Actions
+            name: setup/controllers
+            parent: 
+            parent_id: 9
+            site_controller_id: 8
+            url: /goldberg/site_controllers/list
+          14: &id010 !ruby/object:Goldberg::Menu::Node 
+            content_page_id: 10
+            controller_action_id: 
+            id: 14
+            label: Credits &amp; Licence
+            name: credits
+            parent: 
+            parent_id: 2
+            site_controller_id: 
+            url: /credits
+          3: &id006 !ruby/object:Goldberg::Menu::Node 
+            children: 
+            - 9
+            content_page_id: 9
+            controller_action_id: 
+            id: 3
+            label: Administration
+            name: admin
+            parent: 
+            parent_id: 
+            site_controller_id: 
+            url: /admin
+          9: &id008 !ruby/object:Goldberg::Menu::Node 
+            children: 
+            - 13
+            - 6
+            - 5
+            - 8
+            - 7
+            - 11
+            - 12
+            content_page_id: 8
+            controller_action_id: 
+            id: 9
+            label: Setup
+            name: setup
+            parent: 
+            parent_id: 3
+            site_controller_id: 
+            url: /site_admin
+        by_name: 
+          setup/pages: *id001
+          setup/users: *id002
+          setup/system_settings: *id003
+          setup/menus: *id004
+          setup/roles: *id005
+          admin: *id006
+          setup/permissions: *id007
+          setup: *id008
+          contact_us: *id009
+          credits: *id010
+          setup/controllers: *id011
+          home: *id012
+        crumbs: 
+        - 1
+        root: &id013 !ruby/object:Goldberg::Menu::Node 
+          children: 
+          - 1
+          - 3
+          - 2
+          parent: 
+        selected: 
+          1: *id012
+        vector: 
+        - *id013
+        - *id012
+
     default_page_id: "8"
     id: "3"
     description: ""
