--- a/db/SystemSettings.yml
+++ b/db/SystemSettings.yml
@@ -3,15 +3,15 @@
   attributes: 
     session_expired_page_id: "2"
     session_timeout: "7200"
-    self_reg_enabled: "1"
+    self_reg_enabled: "0"
     menu_depth: "3"
     site_default_page_id: "1"
-    self_reg_send_confirmation_email: "1"
-    self_reg_confirmation_required: "1"
+    self_reg_send_confirmation_email: "0"
+    self_reg_confirmation_required: "0"
     site_url_prefix: http://localhost:3000/
     permission_denied_page_id: "4"
     id: "1"
-    self_reg_role_id: "2"
+    self_reg_role_id: 
     not_found_page_id: "3"
     default_markup_style_id: "1"
     public_role_id: "1"
